--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,12 +58,44 @@ a:hover{
 .navbar-nav li i{
     font-size: 18px;
 }
-
-/* login navbar header*/
+/* default dropdown-menu */
+.dropdown-menu li > a {
+    color: #ccc;
+}
+.dropdown-menu li > a:hover {
+    background-color: #f7941d;
+    color: white;
+}
 .dropdown-menu {
     position: absolute;
     top: 100%;
     left: 0;
+    z-index: 1000;
+    display: none;
+    color: #fff;
+    min-width: 160px;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    list-style: none;
+    font-size: 14px;
+    text-align: left;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0,0,0,.15);
+    background-clip: padding-box;
+    border-radius: 4px;
+    color: #fff;
+    background-color: #4d4d4d;
+    border-color: transparent;
+    box-shadow: 0 6px 30px rgba(0,22,68,.6);
+
+}
+
+/*******/
+/* login navbar header dropdown-menu*/
+.login-form .dropdown-menu {
+    position: absolute;
+    top: 100%;
+
     z-index: 1000;
     display: none;
     color: #fff;
@@ -88,11 +120,11 @@ a:hover{
     font-size: 23px;
 }
 @media (min-width: 979px) {
-    ul.nav li.dropdown:hover > ul.dropdown-menu {
+    ul.nav li.login-form:hover > ul.dropdown-menu {
         display: block;
     }
 }
-ul.nav li.dropdown:hover > ul.dropdown-menu {
+ul.nav li.login-form:hover > ul.dropdown-menu {
     display: block;
 }
 
@@ -147,6 +179,44 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 /**/
 /* fin login navbar header*/
 
+/** CAMBIO DEL COLLAPSE DE NAVBAR PARA*/
+@media (max-width: 990px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+}
+/**********/
 
 
 /**FIN HEADER**/
