--- a/public/assets/scss/offcanvas.scss
+++ b/public/assets/scss/offcanvas.scss
@@ -126,29 +126,76 @@ $link_color: #ee7421;
 }
 
 .offcanvas-header{
-  padding: 15px;
-  background-color: #101010;
+    padding: 15px;
+    background-color: #101010;
 
-  .sign{
-    text-align: center;
-    li{
+    .sign{
+        text-align: center;
+        li{
 
 
-      a{
-        font-size:12px;
-        &:hover,&:focus{
+          a{
+            font-size:12px;
+            &:hover,&:focus{
 
-          background-color: transparent;
+              background-color: transparent;
+            }
+          }
+          img{
+            width: 33px;
+            height: 33px;
+          }
+
         }
-      }
-      img{
-        width: 33px;
-        height: 33px;
-      }
 
     }
+    .avatar{
+        color: #fff;
+        a{
+          text-decoration: none;
+        }
+        img{
+          width: 50px;
+          height: 50px;
+          margin-right: 5px;
+        }
+    }
+    .list-group{
+        margin-bottom: 0px;
 
-  }
+        a{
+          &:focus,&:hover{
+            color: $link_color;
+            text-decoration: none;
+            background-color: transparent;
+          }
+        }
+
+        #user-menu{
+          .list-group-item{
+            border-radius: 0 ;
+            color: #fff;
+            font-size:12px;
+            background-color: transparent;
+            border: none;
+            border-bottom: solid 1px #222222;
+
+          }
+          .list-group-item:last-child {
+            border-bottom: none;
+          }
+          a{
+
+            &:focus,&:hover{
+              color: #fff;
+
+              text-decoration: none;
+              background-color: $link_color;
+            }
+          }
+        }
+
+    }
 
 }
 
