--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -11,6 +11,7 @@
 /**********/
 /* IMPORTS */
 @import 'header';
+@import 'userprofile';
 /******/
 
 body {
@@ -23,5 +24,69 @@ a{
 a:hover{
   color: $link_hover;
 
+}
+
+/** FOOTER **/
+/* Social Links
+---------------------------------- */
+.subfooter {
+  background-color: black;
+  border-top: 1px solid #f3f3f3;
+  border-bottom: 1px solid #f3f3f3;
+  padding: 40px 0;
+  color: #c9dce3;
+  .subfooter-info{
+    list-style: none;
+    text-align: center;
+  }
+  li{
+    margin: -5px 25px 10px 0;
+    display: inline-block;
+  }
+
+}
+
+
+.social-links {
+  padding: 0;
+  list-style: none;
+  margin: 0px 0;
+}
+.social-links li {
+  margin: -5px 25px 10px 0;
+  display: inline-block;
+  font-size: 36px;
+}
+.social-links li a {
+  color: #ffffff;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.social-links li.twitter a:hover {
+  color: #55acee;
+}
+.social-links li.skype a:hover {
+  color: #00aff0;
+}
+.social-links li.linkedin a:hover {
+  color: #0976b4;
+}
+.social-links li.googleplus a:hover {
+  color: #dd4b39;
+}
+.social-links li.youtube a:hover {
+  color: #b31217;
+}
+.social-links li.flickr a:hover {
+  color: #ff0084;
+}
+.social-links li.facebook a:hover {
+  color: #3b5998;
+}
+.social-links li.pinterest a:hover {
+  color: #cb2027;
 }
 
