--- a/public/assets/css/authstyle.css
+++ b/public/assets/css/authstyle.css
@@ -1,5 +1,7 @@
 /*VARIABLES*/
 /*Colors*/
+/*$bg_color_O:-o-linear-gradient(110deg, #a05904, #000);
+$bg_color_Moz:-moz-linear-gradient(110deg, #a05904, #000);*/
 /*Effect*/
 /**********/
 /* IMPORTS */
