--- a/public/assets/scss/authstyle.scss
+++ b/public/assets/scss/authstyle.scss
@@ -3,7 +3,11 @@
 /*Colors*/
 $link: #fff;
 $link_hover: #4c3346;
+
 $bg_color:linear-gradient(110deg, #a05904, #000);
+/*$bg_color_O:-o-linear-gradient(110deg, #a05904, #000);
+$bg_color_Moz:-moz-linear-gradient(110deg, #a05904, #000);*/
+
 
 /*Effect*/
 $link_effect: all 0.2s ease-in-out;
@@ -14,8 +18,10 @@ $link_effect: all 0.2s ease-in-out;
 @import 'register';
 /******/
 body{
+
   font-family: 'Raleway', sans-serif;
   background-image: $bg_color;
+
 
 }
 .login,.register{
