--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -145,26 +145,47 @@ body {
 @media (max-width: 1098px) {
   .profile-container {
     margin-top: 190px; } }
-.nav-tabs {
-  border-bottom: none; }
-  .nav-tabs li {
-    font-weight: bold; }
-  .nav-tabs li.active > a,
-  .nav-tabs li.active > a:hover,
-  .nav-tabs li.active > a:focus {
-    color: #f7941d;
-    cursor: default;
-    background-color: transparent;
-    border: 1px solid #ddd;
-    border-bottom: none;
-    border-bottom-color: transparent; }
-  .nav-tabs a {
-    color: #000; }
-    .nav-tabs a:hover {
-      color: #000; }
+.nav-tabs li {
+  font-weight: bold; }
+.nav-tabs li.active > a,
+.nav-tabs li.active > a:hover,
+.nav-tabs li.active > a:focus {
+  color: #f7941d;
+  cursor: default;
+  background-color: transparent;
+  border-top: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #f5f5f5; }
+.nav-tabs a {
+  color: #e16d18; }
+  .nav-tabs a:hover {
+    color: #e16d18; }
 
-.tab-content {
-  border: 1px solid #ddd; }
+.tab-container {
+  border: 1px solid #ddd;
+  border-top: none;
+  padding: 30px 90px 20px 60px; }
+  .tab-container label {
+    line-height: 1.42857143;
+    padding: 6px 0px; }
+  .tab-container .update-btn .btn-success {
+    padding: 15px;
+    text-transform: uppercase;
+    font-weight: bold; }
+    .tab-container .update-btn .btn-success:hover {
+      background-color: #1bbf1f; }
+
+.avatar-preview {
+  text-align: center; }
+  .avatar-preview img {
+    width: 160px;
+    height: 160px; }
+
+.desactivar {
+  margin-top: 110px;
+  text-align: center;
+  background-color: #c8c8c8; }
 
 /******/
 body {
@@ -176,6 +197,9 @@ a {
 
 a:hover {
   color: #f7941d; }
+
+.btn {
+  transition: all 0.2s ease-in-out; }
 
 /** FOOTER **/
 /* Social Links
