--- a/public/assets/scss/_userprofile.scss
+++ b/public/assets/scss/_userprofile.scss
@@ -1,5 +1,6 @@
 $bg-image: "../../images/bg.png";
 $link_color: #f7941d;
+$link_color2: #e16d18;
 body{
   background-image: url($bg-image);
 }
@@ -14,9 +15,11 @@ body{
   }
 }
 .nav-tabs{
-  border-bottom: none;
+
+
   li{
     font-weight: bold;
+
   }
    li.active > a,
    li.active > a:hover,
@@ -24,20 +27,55 @@ body{
     color: $link_color;
     cursor: default;
     background-color: transparent;
-    border: 1px solid #ddd;
-     border-bottom: none;
-    border-bottom-color: transparent;
+    border-top: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+     border-bottom:1px solid #f5f5f5;
+
   }
 
   a{
-    color: #000;
+    color: $link_color2;
     &:hover{
-      color:#000;
+      color: $link_color2;
     }
   }
 
 }
-.tab-content{
+.tab-container{
   border: 1px solid #ddd;
+  border-top: none;
+  padding: 30px 90px 20px 60px;
+  label{
+    line-height: 1.42857143;
+    padding: 6px 0px;
 
+  }
+  .update-btn{
+      .btn-success{
+        padding: 15px;
+        text-transform: uppercase;
+        font-weight: bold;
+
+
+        &:hover{
+          background-color: #1bbf1f;
+        }
+      }
+    }
+
+}
+.avatar-preview{
+  text-align: center;
+  img{
+    width: 160px;
+    height: 160px;
+  }
+
+}
+
+.desactivar{
+  margin-top: 110px;
+  text-align:center;
+  background-color: #c8c8c8;
 }
