--- a/public/assets/scss/_userprofile.scss
+++ b/public/assets/scss/_userprofile.scss
@@ -1,81 +1,30 @@
-$bg-image: "../../images/bg.png";
-$link_color: #f7941d;
-$link_color2: #e16d18;
-body{
-  background-image: url($bg-image);
-}
-.profile-container{
-  margin-top: 140px;
-}
-@media (max-width: 1098px){
-  .profile-container {
+.header-profile{
+  width: 100%;
+  background-color: #222222;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 30px;
+  float: left;
 
-    margin-top: 190px;
-
-  }
-}
-.nav-tabs{
-
-
-  li{
-    font-weight: bold;
-
-  }
-   li.active > a,
-   li.active > a:hover,
-   li.active > a:focus {
-    color: $link_color;
-    cursor: default;
-    background-color: transparent;
-    border-top: 1px solid #ddd;
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-     border-bottom:1px solid #f5f5f5;
-
-  }
-
-  a{
-    color: $link_color2;
-    &:hover{
-      color: $link_color2;
-    }
-  }
-
-}
-.tab-container{
-  border: 1px solid #ddd;
-  border-top: none;
-  padding: 30px 90px 20px 60px;
-  label{
-    line-height: 1.42857143;
-    padding: 6px 0px;
-
-  }
-  .update-btn{
-      .btn-success{
-        padding: 15px;
-        text-transform: uppercase;
-        font-weight: bold;
-
-
-        &:hover{
-          background-color: #1bbf1f;
-        }
-      }
+  .avatar-profile{
+    float: left;
+    margin-right: 15px;
+    img{
+      width: 100px;
+      height:100px;
     }
 
-}
-.avatar-preview{
-  text-align: center;
-  img{
-    width: 160px;
-    height: 160px;
+
   }
 
-}
-
-.desactivar{
-  margin-top: 110px;
-  text-align:center;
-  background-color: #c8c8c8;
+  .info-profile{
+    float: left;
+    color: #fff;
+    strong{
+      font-size: 27px;
+    }
+    i{
+      font-size: 13px;
+    }
+  }
 }
